src/objects/LVA_CallUsConfig__mdt.object
<CustomObject>
    <fields>
        <fullName>AvailableHours__c</fullName>
        <label>AvailableHours</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsoCountry__c</fullName>
        <label>IsoCountry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PhoneNumber__c</fullName>
        <label>PhoneNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <label>Sector</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>LVA_CallUsConfig</label>
    <pluralLabel>LVA_CallUsConfig</pluralLabel>
</CustomObject>